--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ResAktWebbContext": "Server=(localdb)\\mssqllocaldb;Database=ResAktWebbContext-d2c9a546-4f22-4492-8e24-2792ded93c57;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
