--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ResAktWebbContext": "Server=(localdb)\\mssqllocaldb;Database=ResAktWebbContext-ba94fbed-648c-4be3-8a7c-ec6d1e491270;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
