--- a/ResAktWebb.csproj
+++ b/ResAktWebb.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="microsoft.visualstudio.web.browserlink" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="serilog.extensions.logging.file" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
