--- a/ResAktWebb.csproj
+++ b/ResAktWebb.csproj
@@ -20,7 +20,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClassLib\" />
     <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="RestHelperLib">
+      <HintPath>ClassLib\RestHelperLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
